# 3D-Scanner-Platform

./: .gitignore  README.md
arduino/controller/: controller.ino
cpp/pcl/: CMakeLists.txt  main.cpp
cpp/pcl/Features/: Radius_Outlier_Removal.cpp  Radius_Outlier_Removal.h
cpp/pcl/IO/: Load_From_txt.cpp  Load_From_txt.h
cpp/pcl/Viewer/: Viewer.cpp  Viewer.h
example_data/: demo_filtered_last_msg.bag
ros_lidar_processing/: start_lidar_project.sh  start_ransac_project.sh
ros_lidar_processing/src/config/lidar_project/: CMakeLists.txt  lidar_project.launch  package.xml  shit.txt
ros_lidar_processing/src/config/ransac_project/: CMakeLists.txt  lidar_project.launch  package.xml
ros_lidar_processing/src/msgs/lidar_command_message/: CMakeLists.txt  package.xml
ros_lidar_processing/src/msgs/lidar_command_message/msg/: COMMAND.msg  lidar_command_message.msg
ros_lidar_processing/src/msgs/spherical_3d_pts_message/: CMakeLists.txt  package.xml
ros_lidar_processing/src/msgs/spherical_3d_pts_message/msg/: spherical_3d_pts_message.msg
ros_lidar_processing/src/nodes/RANSAC_FDUCKERY/: CMakeLists.txt  package.xml
ros_lidar_processing/src/nodes/RANSAC_FDUCKERY/include/lidar_processing/: lidar_processing.h
ros_lidar_processing/src/nodes/RANSAC_FDUCKERY/src/: lidar_processing.cpp
ros_lidar_processing/src/nodes/lcd_communicator/: CMakeLists.txt  package.xml
ros_lidar_processing/src/nodes/lcd_communicator/include/lcd_communicator/: lcd_communicator.h
ros_lidar_processing/src/nodes/lcd_communicator/src/: lcd_communicator.cpp
ros_lidar_processing/src/nodes/lidar_processing/: CMakeLists.txt  package.xml
ros_lidar_processing/src/nodes/lidar_processing/include/lidar_processing/: lidar_processing.h
ros_lidar_processing/src/nodes/lidar_processing/src/: lidar_processing.cpp
ros_lidar_processing/src/nodes/usb_communicator/: CMakeLists.txt  package.xml
ros_lidar_processing/src/nodes/usb_communicator/include/usb_communicator/: usb_communicator.h
ros_lidar_processing/src/nodes/usb_communicator/src/: usb_communicator.cpp
serial_interface/: Makefile
serial_interface/include/: serial_interface.h
serial_interface/src/: cli.cpp  serial_interface.cpp
