cmake_minimum_required(VERSION 3.14)
project(pcl)
find_package(PCL 1.8 REQUIRED)
set(CMAKE_CXX_STANDARD 14)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl main.cpp Viewer/Viewer.cpp Viewer/Viewer.h IO/Load_From_txt.cpp IO/Load_From_txt.h Features/Radius_Outlier_Removal.cpp Features/Radius_Outlier_Removal.h)
target_link_libraries (pcl ${PCL_LIBRARIES})
