
<package format="2">
    <name>lidar_project</name>
    <version>1.0.0</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="ivana@osrf.org">Ivana Bildbotz</maintainer>
    <license>BSD</license>

    <build_depend>roslaunch</build_depend>

    <depend>tf</depend>
    <depend>lidar_processing</depend>
    <depend>usb_communicator</depend>
    <depend>lcd_communicator</depend>

</package>
