<package format="2">
    <name>lidar_command_message</name>
    <version>1.0.0</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="ivana@osrf.org">Ivana Bildbotz</maintainer>
    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>std_msgs</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend>
</package>

